# vurtigo

./: CMakeLists.txt  FindDCMTK.cmake  README  TargetDoc.cmake  doxy.config.in  rtMain.cpp
Plugins/: CMakeLists.txt
Plugins/AlignmentTool/: Aligner.cpp  Aligner.h  AlignmentTool.ui  AlignmentToolConfig.xml  AlignmentToolPlugin.cpp  AlignmentToolPlugin.h  AlignmentToolUI.cpp  AlignmentToolUI.h  CMakeLists.txt
Plugins/CameraMotion/: CMakeLists.txt  CameraMotionConfig.xml  CameraMotionPlugin.cpp  CameraMotionPlugin.h
Plugins/CardiacMeshReader/: CMakeLists.txt  CardiacMeshReader.ui  CardiacMeshReaderConfig.xml  CardiacMeshReaderPlugin.cpp  CardiacMeshReaderPlugin.h  CardiacMeshReaderUI.cpp  CardiacMeshReaderUI.h  MeshFileReader.cpp  MeshFileReader.h  MeshPointSet.cpp  MeshPointSet.h
Plugins/CartoReader/: CMakeLists.txt  CartoFileReader.cpp  CartoFileReader.h  CartoReader.ui  CartoReaderConfig.xml  CartoReaderPlugin.cpp  CartoReaderPlugin.h  CartoReaderUI.cpp  CartoReaderUI.h
Plugins/CathHistory/: CMakeLists.txt  CathHistory.ui  CathHistoryConfig.xml  CathHistoryPlugin.cpp  CathHistoryPlugin.h  CathHistoryUI.cpp  CathHistoryUI.h  HistoryData.cpp  HistoryData.h
Plugins/CathTracking/: CMakeLists.txt  CathTracking.ui  CathTrackingConfig.xml  CathTrackingPlugin.cpp  CathTrackingPlugin.h  CathTrackingUI.cpp  CathTrackingUI.h  TrackData.cpp  TrackData.h
Plugins/DICOMReader/: CMakeLists.txt  DICOMFileReader.cpp  DICOMFileReader.h  DICOMReader.ui  DICOMReaderConfig.xml  DICOMReaderPlugin.cpp  DICOMReaderPlugin.h  DICOMReaderUI.cpp  DICOMReaderUI.h  FindDCMTK.cmake
Plugins/GeomServer/: CMakeLists.txt  Converter.cpp  Converter.h  GeomServer.ui  GeomServerConfig.xml  GeomServerConsts.h  GeomServerPlugin.cpp  GeomServerPlugin.h  GeomServerUI.cpp  GeomServerUI.h  Main.cpp  Main.h  Main.ui  SenderSimp.cpp  SenderSimp.h  SenderThread.cpp  SenderThread.h  arguments.h  genericMode.cpp  genericMode.h  geom_client.cpp  geom_client.h  readOnlyMode.cpp  readOnlyMode.h  sender.cpp  sender.h  writeOnlyMode.cpp  writeOnlyMode.h
Plugins/HelloWorld/: CMakeLists.txt  HelloWorldConfig.xml  HelloWorldDataObject.cpp  HelloWorldDataObject.h  HelloWorldPlugin.cpp  HelloWorldPlugin.h  HelloWorldPluginUI.cpp  HelloWorldPluginUI.h  HelloWorldPluginUI.ui  HelloWorldRenderObject.cpp  HelloWorldRenderObject.h  HelloWorldRenderObjectMaker.cpp  HelloWorldRenderObjectMaker.h  HelloWorldUI.ui  README
Plugins/HumanSensor/: CMakeLists.txt  HumanSensor.cpp  HumanSensor.h  HumanSensorPlugin.cpp  HumanSensorPlugin.h
Plugins/ImageReader/: CMakeLists.txt  DICOMReader.ui  DICOMReaderConfig.xml  DICOMReaderPlugin.h  DICOMReaderUI.cpp  DICOMReaderUI.h
Plugins/ScreenCapture/: AviWriter.cpp  AviWriter.h  BmpWriter.cpp  BmpWriter.h  CMakeLists.txt  JpgWriter.cpp  JpgWriter.h  ScreenCapture.ui  ScreenCaptureConfig.xml  ScreenCapturePlugin.cpp  ScreenCapturePlugin.h  ScreenCaptureThread.cpp  ScreenCaptureThread.h  ScreenCaptureUI.cpp  ScreenCaptureUI.h
Plugins/TestSuite/: CMakeLists.txt  TestLargeVol.cpp  TestLargeVol.h  TestSuite.ui  TestSuiteBasic.cpp  TestSuiteBasic.h  TestSuiteConfig.xml  TestSuitePlugin.cpp  TestSuitePlugin.h  TestSuiteUI.cpp  TestSuiteUI.h
UI/: rtMainWindow.cpp  rtMainWindow.h  rtMainWindow.ui
include/: ControlGraphWidget.h  FilterDialog.h  GraphWidget.h  HoverPoints.h  ObjectControlWidget.h  ObjectSelectionComboBox.h  Plane2DControlWidget.h  PointTableWidget.h  Points3DControlWidget.h  ProfileWidget.h  VtkColorTable.h  VtkPiecewiseGraph.h  VtkRangeWidget.h  cineWidget.h  customQVTKWidget.h  objTypes.h  pluginConfigHandler.h  pointPlacementDialog.h  rt2DPlotDataObject.h  rt2DPlotRenderObject.h  rt2dPointDataObject.h  rt2dPointRenderObject.h  rt2dSliceDataObject.h  rt2dSliceInputColorWidget.h  rt2dSliceRenderObject.h  rt3DTimePointData.h  rt3dPointBufferDataObject.h  rt3dPointBufferRenderObject.h  rt3dVolumeDataObject.h  rt3dVolumeRenderObject.h  rt4dVolumeDataObject.h  rt4dVolumeRenderObject.h  rtApplication.h  rtArrowPipeline.h  rtAxesActor.h  rtAxesProperties.h  rtBaseHandle.h  rtBasic2DPointData.h  rtBasic3DPointData.h  rtBasicPointData.h  (+50 more)
rtConfig/: DefMarkerStyles.xml  DefPlugins.xml  VurtigoConfig.xml  VurtigoSrcHelp.qhc  VurtigoSrcHelp.qhcp  WindowLevel.xml
rtControl/: CMakeLists.txt  rtApplication.cpp  (+8 more)
rtObject/: CMakeLists.txt  objTypes.h  rt2DPlotDataObject.cpp  rt2DPlotRenderObject.cpp  rt2dPointDataObject.cpp  rt2dPointDataObject.h  rt2dPointRenderObject.cpp  rt2dPointRenderObject.h  rt2dSliceDataObject.cpp  rt2dSliceDataObject.h  rt2dSliceInputColorWidget.cpp  rt2dSliceRenderObject.cpp  rt2dSliceRenderObject.h  rt3DTimePointData.cpp  rt3dPointBufferDataObject.cpp  rt3dPointBufferRenderObject.cpp  rt3dPointBufferRenderObject.h  rt3dVolumeDataObject.cpp  rt3dVolumeDataObject.h  rt3dVolumeRenderObject.cpp  rt3dVolumeRenderObject.h  rt4dVolumeDataObject.cpp  rt4dVolumeDataObject.h  rt4dVolumeRenderObject.cpp  rt4dVolumeRenderObject.h  rtBasic2DPointData.cpp  rtBasic3DPointData.cpp  rtBasicPointData.cpp  rtBox2DOutline.cpp  rtCardiacMeshPointData.cpp  rtCartoPointData.cpp  rtCathDataObject.cpp  rtCathDataObject.h  rtCathRenderObject.cpp  rtCathRenderObject.h  rtColorFuncDataObject.cpp  rtColorFuncDataObject.h  rtColorFuncRenderObject.cpp  rtColorFuncRenderObject.h  rtCrosshair2D.cpp  (+39 more)
rtUI/: CMakeLists.txt  ControlGraphWidget.cpp  EPOptions.ui  FilterDialog.cpp  FilterDialog.ui  GraphWidget.cpp  HoverPoints.cpp  ObjectControlWidget.cpp  ObjectSelectionComboBox.cpp  PointTableWidget.cpp  ProfileWidget.cpp  ProfileWidget.ui  VtkClampingWidget.ui  VtkColorTable.cpp  VtkColorTable.ui  VtkPiecewiseGraph.cpp  VtkRangeDialog.ui  VtkRangeWidget.cpp  VtkRangeWidget.ui  axesProperties.ui  cathOptions.ui  cineWidget.cpp  cineWidget.ui  customQVTKWidget.cpp  customQVTKWidget.h  landmarkRegistration.ui  newObjectDialog.ui  options2DView.ui  pointPlacement.ui  pointPlacementDialog.cpp  points3dOptions.ui  polyDataOptions.ui  propertyChooserDialog.ui  rt3DPointBuffer.ui  rtAboutDialog.ui  rtAxesActor.cpp  rtAxesProperties.cpp  rtAxesProperties.h  rtImagePlaneWidget.cpp  rtImagePlaneWidget.h  (+18 more)
(+26 files in other folders)
